<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.coolteam.dataprotection.ui.addtransaction.AddTransactionActivity">

    <TextView
        android:id="@+id/new_transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/new_transaction"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/requester"
        android:layout_below="@+id/new_transaction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/requesterHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/location"
        android:layout_below="@+id/requester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/locationHint"
        android:inputType="text" />


    <TextView
        android:id="@+id/add_requester_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/location"
        android:layout_below="@+id/location"
        android:text="@string/addRequesterLogoHint"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/requester_logo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/ic_menu_gallery" />



    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_requester_logo"
        android:layout_marginTop="12dp"
        android:hint="@string/descriptionHint"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="10" />

    <Button
        android:id="@+id/add_new_transaction"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/description"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:onClick="onClick_Save"
        android:text="@string/create_new_transaction"
        android:textAllCaps="false"
        android:textColor="#fff" />

</RelativeLayout>

