<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.coolteam.dataprotection.transactionform.TransactionFormActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/new_transaction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_transaction"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/requester"
            android:layout_below="@+id/new_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/requesterHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/location"
            android:layout_below="@+id/requester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/locationHint"
            android:inputType="text" />

        <RelativeLayout
            android:id="@+id/requester_logo_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_requester_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addRequesterLogoHint"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/requester_logo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/add_requester_logo"
                android:contentDescription="@string/requesterLogoHint"
                android:background="@android:drawable/ic_menu_gallery" />

        </RelativeLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/requester_logo_ll"
            android:layout_below="@+id/requester_logo_ll"
            android:layout_marginTop="12dp"
            android:hint="@string/descriptionHint"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="10" />

        <Button
            android:id="@+id/add_new_transaction"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/description"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:onClick="onClick_Save"
            android:text="@string/create_new_transaction"
            android:textAllCaps="false"
            android:textColor="#fff" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
