<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TransactionDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:id="@+id/transaction_image"/>

        <TextView
            android:id="@+id/transaction_requester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/transaction_image"
            android:layout_toRightOf="@+id/transaction_image"
            android:text="@string/requester"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/date"
            android:layout_below="@+id/transaction_requester"
            android:layout_alignStart="@+id/transaction_requester"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/transaction_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/transaction_date"
            android:layout_alignStart="@+id/transaction_date"
            android:text="@string/location"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/transaction_transactionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_location"
            android:layout_alignStart="@+id/transaction_location"
            android:layout_marginTop="5dp"
            android:text="@string/transactionCode"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_transactionCode"
            android:layout_alignStart="@+id/transaction_transactionCode"
            android:layout_marginTop="5dp"
            android:text="@string/status"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/transaction_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_status"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textSize="18sp"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="TRANSACTION DETAILS"
        android:textColor="#2f2f2f"
        android:textSize="22sp" />

</RelativeLayout>
